Fixed fonts on mobile

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ a {
 
 .carousel-caption h1 {
   text-shadow: 1px 1px 15px rgba(0, 0, 0, 1);
+  font-size: 2.2rem;
 }
 
 .carousel-caption h3 {
